RP: finished MessageMine page and form function of mark to readed / deleted

--- a/tssrazor/Pages/Members/Register.cshtml
+++ b/tssrazor/Pages/Members/Register.cshtml
@@ -30,7 +30,7 @@
             当然，你也可以在你熟悉的领域去<span>帮助别人</span>。由此而形成我们这个“你帮他他帮我我帮你，大家一起帮”的网上互助社区平台。
         </li>
         <li>
-            公平起见，我们还引入了<strong>帮帮<span class="bean">豆</span>/<span class="dot">点</span>/<span class="credit">币</span></strong>三级概念，以记录和衡量社区成员的收获和贡献。
+            公平起见，我们还引入了<strong>学习<span class="bean">豆</span>/<span class="dot">点</span>/<span class="credit">币</span></strong>三级概念，以记录和衡量社区成员的收获和贡献。
         </li>
         <li>
             赶快加入我们，赚取帮帮币吧！
@@ -47,7 +47,7 @@
 @if (Model.NewUser == null)
 {
     <form method="post" class="label-bold">
-        <section class="card card-body border-dashed yellow-highlight mb-3">
+        <section class="card card-body border-dashed-2 yellow-highlight mb-3">
             <div class="d-flex justify-content-end mb-2">
                 <a class="text-primary" href>
                     <span class="fa fa-question-circle"></span>
