--- a/tssrazor/Pages/Shared/_Layout.cshtml
+++ b/tssrazor/Pages/Shared/_Layout.cshtml
@@ -181,7 +181,7 @@
                             </span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a href="" class="dropdown-item">
+                            <a class="dropdown-item" asp-page="/Backstage/MessageMine" asp-route-msgStatus="0" asp-route-pageIndex="1">
                                 <span class="fa fa-bell">
                                     <i class="fa">我的消息</i>
                                 </span>
