--- a/tssrazor/Pages/Shared/_LayoutFixedContentWidget.cshtml
+++ b/tssrazor/Pages/Shared/_LayoutFixedContentWidget.cshtml
@@ -35,8 +35,8 @@
 }
 
 @section WidgetInfo {
-    <div class="widget-nav mb-4">
-        <ul class="nav nav-tabs flex-nowrap">
+    <div class="mb-4">
+        <ul class="nav nav-tabs flex-nowrap custom-nav">
             <li class="nav-item flex-fill">
                 <a href="#supervise" class="nav-link text-center" data-toggle="tab">
                     <span class="fa fa-eye">
