--- a/tssrazor/Pages/Members/Register.cshtml
+++ b/tssrazor/Pages/Members/Register.cshtml
@@ -46,6 +46,8 @@
 
 @if (Model.NewUser == null)
 {
+    <div asp-validation-summary="ModelOnly"></div>
+
     <form method="post" class="label-bold">
         <section class="card card-body border-dashed-2 yellow-highlight mb-3">
             <div class="d-flex justify-content-end mb-2">
@@ -57,23 +59,28 @@
             <div class="form-group">
                 <label>邀请人：（* 必填，<a data-toggle="tooltip" title="点击由系统推荐" href>没有邀请人</a>）</label>
                 <input class="form-control" asp-for="Register.InvitedName" placeholder="他的用户名，模糊查询只能从头开始" />
+                <span asp-validation-for="Register.InvitedName"></span>
             </div>
             <div class="form-group mb-0">
                 <label>邀请码：（* 必填）</label>
                 <input class="form-control" asp-for="Register.InvitedCode" placeholder="4位数字" />
+                <span asp-validation-for="Register.InvitedCode"></span>
             </div>
         </section>
         <div class="form-group">
             <label>用户名：（* 必填）</label>
             <input class="form-control" asp-for="Register.Name" placeholder="登录用户名，可修改，不能重复" />
+            <span asp-validation-for="Register.Name"></span>
         </div>
         <div class="form-group">
             <label>密码：（* 必填）</label>
             <input class="form-control" asp-for="Register.Password" placeholder="不少于4个字符" />
+            <span asp-validation-for="Register.Password"></span>
         </div>
         <div class="form-group">
             <label>验证密码：（* 必填）</label>
             <input class="form-control" asp-for="Register.ConfirmPassword" placeholder="和密码相同" />
+            <span asp-validation-for="Register.ConfirmPassword"></span>
         </div>
         <div class="form-group">
             <label>验证码：（* 必填）</label>
@@ -87,6 +94,7 @@
                     </div>
                 </div>
             </div>
+            <span asp-validation-for="Register.CaptchaCode"></span>
         </div>
         <div class="form-group">
             <input type="submit" class="btn btn-primary" value="提交" />
