RP: fixed MessageMine page with PRG

--- a/tssrazor/Pages/Backstage/MessageMine.cshtml
+++ b/tssrazor/Pages/Backstage/MessageMine.cshtml
@@ -84,12 +84,12 @@
                 {
                     <div class="form-row text-center align-items-center font-weight-bold">
                         <div class="col-sm-1 text-left">
-                            @*<input asp-for="Messages[i].IsChecked" />
-                            <input asp-for="Messages[i].Id" type="hidden" />*@
+                            <input asp-for="Messages[i].IsChecked" />
+                            <input asp-for="Messages[i].Id" type="hidden" />
 
-                             <input type="checkbox" name="Messages[@i].IsChecked" value="true" />
+                             @*<input type="checkbox" name="Messages[@i].IsChecked" value="true" />
                              <input type="hidden" name="Messages[@i].IsChecked" value="false" />
-                            <input type="hidden" name="Messages[@i].Id" value="@Model.Messages[i].Id" />
+                            <input type="hidden" name="Messages[@i].Id" value="@Model.Messages[i].Id" />*@
 
                         </div>
                         <div class="col-sm-2">
