--- a/tssrazor/Pages/Shared/_LayoutFixedMember.cshtml
+++ b/tssrazor/Pages/Shared/_LayoutFixedMember.cshtml
@@ -6,7 +6,7 @@
     @RenderSection("TextHeader", false)
     <hr />
 </div>
-<div class="row">
+<div class="row pt-2">
     <div class="col-md-6 col-lg-5 col-xl-4">
         @RenderBody()
     </div>
