--- a/tssrazor/wwwroot/css/base.css
+++ b/tssrazor/wwwroot/css/base.css
@@ -365,3 +365,10 @@ input[type="radio"], input[type="checkbox"] {
     font-size: 80%;
     color: #dc3545;
 }
+
+/* card warning style
+------------------------------------------------------------ */
+.card-warning {
+    background: #f5f5f5;
+    color: #8a6d3b;
+}
