RP: fixed WidgetKeywords with View Component

--- a/tssrazor/Pages/Shared/_LayoutFixedContentWidget.cshtml
+++ b/tssrazor/Pages/Shared/_LayoutFixedContentWidget.cshtml
@@ -5,7 +5,9 @@
 @RenderBody()
 
 @section WidgetKeywords {
-    <div class="card mb-4">
+    <vc:keywords skip-count="1" take-count="2"></vc:keywords>
+
+    @*<div class="card mb-4">
         <div class="card-body">
             <h5 class="card-title">
                 <span class="fa fa-tags">
@@ -31,7 +33,7 @@
                 </span>
             </a>
         </div>
-    </div>
+    </div>*@
 }
 
 @section WidgetInfo {
