--- a/tssrazor/Pages/Backstage/MessageMine.cshtml
+++ b/tssrazor/Pages/Backstage/MessageMine.cshtml
@@ -50,8 +50,8 @@
             </div>*@
 
                     <div class="form-check mr-2">
-                        <input class="form-check-input" id="select-all" type="checkbox">
-                        <label class="form-check-label" for="select-all">全选</label>
+                        <input class="form-check-input" id="select-all-up" type="checkbox">
+                        <label class="form-check-label" for="select-all-up">全选</label>
                     </div>
 
                     <button class="btn btn-primary btn-sm mr-2" type="submit" name="submitStatus" value="1">
@@ -117,8 +117,8 @@
 
                 <div class="form-inline mt-2">
                     <div class="form-check mr-2">
-                        <input class="form-check-input" id="select-all" type="checkbox">
-                        <label class="form-check-label" for="select-all">全选</label>
+                        <input class="form-check-input" id="select-all-down" type="checkbox">
+                        <label class="form-check-label" for="select-all-down">全选</label>
                     </div>
                     <button class="btn btn-primary btn-sm mr-2" type="submit" name="submitStatus" value="read">
                         <span class="fa fa-check-circle">
