--- a/tssrazor/Pages/Shared/_Layout.cshtml
+++ b/tssrazor/Pages/Shared/_Layout.cshtml
@@ -312,6 +312,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     @*<script src="~/js/site.js" asp-append-version="true"></script>*@
     <script src="~/js/testJS/bell.js" asp-append-version="true"></script>
+    <script src="~/js/testJS/message.js" asp-append-version="true"></script>
     <script src="/js/base.js" asp-append-version="true"></script>
 
 </body>
