--- a/tssrazor/Pages/Shared/_Layout.cshtml
+++ b/tssrazor/Pages/Shared/_Layout.cshtml
@@ -313,6 +313,7 @@
     @*<script src="~/js/site.js" asp-append-version="true"></script>*@
     <script src="~/js/testJS/bell.js" asp-append-version="true"></script>
     <script src="~/js/testJS/message.js" asp-append-version="true"></script>
+    <script src="~/js/testJS/register.js" asp-append-version="true"></script>
     <script src="/js/base.js" asp-append-version="true"></script>
 
 </body>
