--- a/tssrazor/Pages/Members/Register.cshtml
+++ b/tssrazor/Pages/Members/Register.cshtml
@@ -58,9 +58,9 @@
             </div>
             <div class="form-group">
                 <label>邀请人：（* 必填，<a data-toggle="tooltip" title="点击由系统推荐" href>没有邀请人</a>）</label>
-                <input class="form-control" asp-for="Register.InvitedName" placeholder="他的用户名，模糊查询只能从头开始" />
+                <input class="form-control" asp-for="Register.InvitedName" placeholder="他的用户名，模糊查询只能从头开始" wtb-val-empty="*jq 邀请人不能为空" wtb-val-msg="#invited" />
 
-                <div>
+                <div wtb-search-invited >
                     <!--<div class="px-2 pt-3 label-normal">-->
 
                         @*<div class="form-inline">
@@ -78,33 +78,33 @@
                 </div>
                 
 
-                <span asp-validation-for="Register.InvitedName"></span>
+                <span asp-validation-for="Register.InvitedName" id="invited"></span>
             </div>
             <div class="form-group mb-0">
                 <label>邀请码：（* 必填）</label>
-                <input class="form-control" asp-for="Register.InvitedCode" placeholder="4位数字" />
-                <span asp-validation-for="Register.InvitedCode"></span>
+                <input class="form-control" asp-for="Register.InvitedCode" placeholder="4位数字" wtb-val-empty="*jq 邀请码不能为空" wtb-val-four="*jq 长度为4个" wtb-val-msg="#icode" />
+                <span asp-validation-for="Register.InvitedCode" id="icode"></span>
             </div>
         </section>
         <div class="form-group">
             <label>用户名：（* 必填）</label>
-            <input class="form-control" asp-for="Register.Name" placeholder="登录用户名，可修改，不能重复" />
-            <span asp-validation-for="Register.Name"></span>
+            <input class="form-control" asp-for="Register.Name" placeholder="登录用户名，可修改，不能重复" wtb-val-empty="*jq 用户名不能为空" wtb-val-msg="#rname" />
+            <span asp-validation-for="Register.Name" id="rname"></span>
         </div>
         <div class="form-group">
             <label>密码：（* 必填）</label>
-            <input class="form-control" asp-for="Register.Password" placeholder="不少于4个字符" />
-            <span asp-validation-for="Register.Password"></span>
+            <input class="form-control" asp-for="Register.Password" placeholder="不少于4个字符" wtb-val-empty="*jq 密码不能为空" wtb-val-morefour="*jq 长度不小于4个" wtb-val-msg="#rpass" />
+            <span asp-validation-for="Register.Password" id="rpass"></span>
         </div>
         <div class="form-group">
             <label>验证密码：（* 必填）</label>
-            <input class="form-control" asp-for="Register.ConfirmPassword" placeholder="和密码相同" />
-            <span asp-validation-for="Register.ConfirmPassword"></span>
+            <input class="form-control" asp-for="Register.ConfirmPassword" placeholder="和密码相同" wtb-val-empty="*jq 确认密码不能为空" wtb-val-same="*jq 必须和密码相同" wtb-val-msg="#cpass" wtb-val-comp="#Register_Password" />
+            <span asp-validation-for="Register.ConfirmPassword" id="cpass"></span>
         </div>
         <div class="form-group">
             <label>验证码：（* 必填）</label>
             <div class="d-flex">
-                <input class="form-control" asp-for="Register.CaptchaCode" data-toggle="tab" data-target="#captcha-image" style="width: 80px;" />
+                <input class="form-control" asp-for="Register.CaptchaCode" data-toggle="tab" data-target="#captcha-image" style="width: 80px;" wtb-val-empty="*jq 验证码不能为空" wtb-val-four="*jq 长度为4个" wtb-val-msg="#ccode" />
                 <div class="tab-content col-form-label ml-1">
                     <div class="tab-pane active" id="captcha-text">点击输入框显示</div>
                     <div class="tab-pane" id="captcha-image">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <span asp-validation-for="Register.CaptchaCode"></span>
+            <span asp-validation-for="Register.CaptchaCode" id="ccode"></span>
         </div>
         <div class="form-group">
             <input type="submit" class="btn btn-primary" value="提交" />
